<resources>
    <string name="app_name">TWeather</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="temperature">%1$s %2$s</string>
    <string name="uv">UV: %1$s</string>
    <string name="feels_like">Feels Like %1$s %2$s</string>
    <string name="min_max_temperature">Min: %1$s %2$s,Max: %3$s %4$s</string>
    <string name="precipitation">Precipitation: %1$s %2$s</string>
    <string name="wind">Wind: %1$s, %2$s %3$s</string>
    <string name="wind_speed">Wind Speed: %1$s %2$s</string>
    <string name="visibility">Visibility: %1$s %2$s</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="mm">mm</string>
    <string name="inch">in</string>
    <string name="kph">kph</string>
    <string name="mph">mph</string>
    <string name="km">km</string>
    <string name="mi">mi.</string>
    <string name="next_week">Next Week</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="location_needed">Please, set location manually in settings</string>
    <string name="loading">Loading</string>
    <string name="_7_days">7 Days</string>
    <string name="use_device_location">Use device location</string>
    <string name="use_device_location_subtitle">Allow the app to get your location</string>
    <string name="location">Location</string>
    <string name="location_subtitle">The location for which the weather is displayed</string>
</resources>
