<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Weather Location">

        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/use_device_location_subtitle"
            android:title="@string/use_device_location" />


        <EditTextPreference
            android:defaultValue="EGYPT"
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/location_subtitle"
            android:title="@string/location" />


    </PreferenceCategory>

    <PreferenceCategory android:title="Units">
        <ListPreference
            android:defaultValue="@string/metric"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            android:key="UNIT_SYSTEM"
            android:summary="%s"
            android:title="Unit system" />
    </PreferenceCategory>
</PreferenceScreen>